--- a/040_MLP_CIFAR_KERAS-Baseline.ipynb
+++ b/040_MLP_CIFAR_KERAS-Baseline.ipynb
@@ -308,6 +308,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Fill the network with your code. Some recommendations. \n",
+    "Use several layers (3-4)\n",
+    "Pyramid structure (every layer smaller)\n",
+    "Use ADAM, but try RMSPROP as well\n",
+    "Play with the learning rate. The one you have in the code is too small\n",
+    "Use the early stopping callback. See the code if you don't understand how I'll tell you in the forum \n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "def build_MLP():\n",
     "    inputs = Input(shape=(input_shape,))\n",
     "    x = Dense(32)(inputs)\n",
