--- a/060_CNN_Cats_and_Dogs-KERAS-Baseline.ipynb
+++ b/060_CNN_Cats_and_Dogs-KERAS-Baseline.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "**Description:** Classify cats and dogs with a simple Convolutional Network<br>\n",
     "                 \n",
-    "**Dataset:** Kaggle Dogs vs Cats dataset originally from Microsoft <br>"
+    "**Dataset:** Kaggle Dogs vs Cats dataset originally from Microsoft <br>\n",
+    "<br>\n",
+    "Try to get as close as possible to 90%"
    ]
   },
   {
