--- a/040_MLP_CIFAR_KERAS-Baseline.ipynb
+++ b/040_MLP_CIFAR_KERAS-Baseline.ipynb
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.0001\n",
+    "LEARNING_RATE = 0.001\n",
     "batch_size = 128\n",
     "num_epochs = 1  # Recommended num_epochs = 50\n",
     "dropout_rate = 0.2\n"
@@ -348,8 +348,8 @@
     "    restore_best_weights = True  # Restore model weights from the epoch with the best value of the monitored quantity\n",
     ")\n",
     "\n",
-    "adam = Adam(learning_rate=0.01, beta_1=0.9, beta_2=0.999, epsilon=1e-07, amsgrad=False)\n",
-    "SGD  = SGD(learning_rate=0.1)"
+    "adam = Adam(learning_rate=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=1e-07, amsgrad=False)\n",
+    "SGD  = SGD(learning_rate=LEARNING_RATE)"
    ]
   },
   {
