--- a/999_CIFAR_reverse_search.ipynb
+++ b/999_CIFAR_reverse_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1ca1a86",
+   "id": "f9c4e1da",
    "metadata": {},
    "source": [
     "### **Reverse Search CIFAR 10**"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b3731f9a",
+   "id": "3356547f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ad540f9",
+   "id": "093c1224",
    "metadata": {},
    "outputs": [
     {
@@ -52,11 +52,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8b916c2",
+   "id": "aadffde1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load a pre-trained EfficientNet model (you can change to a larger variant)\n",
+    "# Load a pre-trained EfficientNetB7 model \n",
     "efficientnet_model = tf.keras.applications.EfficientNetB7(\n",
     "    include_top=False, weights='imagenet', input_shape=(32, 32, 3)\n",
     ")\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a70506b",
+   "id": "1e5531b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "228601bb",
+   "id": "3845b8d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27cd9fa0",
+   "id": "ad0e9e99",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3268de7a",
+   "id": "c8aedb8d",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "8b9197c8",
+   "id": "db95d678",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "37931021",
+   "id": "170bbf37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0c7ac322",
+   "id": "16381eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a5d9b223",
+   "id": "02e56e62",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ae6bbc",
+   "id": "10d337a3",
    "metadata": {},
    "outputs": [],
    "source": []
