--- a/080_CNN_FLOWERS-Transfer_Learning-EfficientNet-BASELINE.ipynb
+++ b/080_CNN_FLOWERS-Transfer_Learning-EfficientNet-BASELINE.ipynb
@@ -345,15 +345,15 @@
     "y_pred = []\n",
     "\n",
     "for images, labels in validation_dataset:\n",
-    "    y_true.extend(labels.numpy())  # True labels \n",
-    "    preds = model.predict(images, verbose=0)  # Model predictions\n",
-    "#    y_pred.extend((preds > 0.5).astype(int))   This is for binary\n",
-    "    y_pred.extend(np.argmax(preds, axis = 1))\n",
+    "    preds = model.predict(images, verbose = 0)  # Get predictions\n",
+    "    y_pred.extend(np.argmax(preds, axis=1))  # Convert softmax to class index\n",
+    "    y_true.extend(labels.numpy())  # Convert tensors to NumPy\n",
     "\n",
-    "y_true = np.argmax(y_true, axis = 1)\n",
+    "# Convert to NumPy arrays\n",
+    "y_true = np.array(y_true)\n",
     "y_pred = np.array(y_pred)\n",
     "\n",
-    "print(y_true.shape, y_pred.shape)"
+    "print(y_true.shape, y_pred.shape)\n"
    ]
   },
   {
@@ -364,11 +364,14 @@
    "source": [
     "# Compute confusion matrix\n",
     "cm = confusion_matrix(y_true, y_pred)\n",
+    "class_names = [\"daisy\", \"dandelion\", \"roses\", \"sunflowers\", \"tulips\"]\n",
     "\n",
     "# Display confusion matrix\n",
+    "plt.figure(figsize=(6, 5))\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=class_names)\n",
     "disp.plot(cmap=plt.cm.Blues, xticks_rotation=\"vertical\")\n",
-    "plt.title(\"Confusion Matrix CNN Binary Classifier\")\n",
+    "plt.xticks(rotation=45, ha=\"right\")  \n",
+    "plt.title(\"Confusion Matrix CNN MultiClass Classifier Flowers Dataset\")\n",
     "plt.show()"
    ]
   },
